--- a/Autoarima.Rmd
+++ b/Autoarima.Rmd
@@ -13,9 +13,13 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ## Demand forecast app using auto.arima function
 
 ::: {style="text-align: justify"}
-This is an R Markdown document with Shiny app that executes the auto.arima function (package forecast). You can use this app to capture historical demand from a CSV file, browsing the desired sku and checking the results.
-Analogically, demand systems use supervised ML algorithms for prediction, using a similar approach: capture historical information using interfaces with the ERP systems (text files) and then, generates the forecasts. 
-There are many other techniques for estimation in the two most popular open sources softwares: R & Python. In this work I use the seasonal auto regressive integrated moving average model (SARIMA) for prediction. Theoretically time series model only uses past data to estimate future demand. If any other component is necessary for estimation, like historical prices, quality scale (e.g. Likert), etc. a different approach should be used (e.g. GLM models).
+This is an R Markdown document with Shiny app that executes the auto.arima function (available in the package forecast). The auto.arima() returns the best ARIMA model according to either AIC or BIC value.
+
+Forecast systems in the market usually works with interfaces capturing historical information from the ERP systems and then generating forecasts by using their ML algorithms. Analogically, this app loads historical information from a csv file **\*\*** to generate predictions using ARIMA model.
+
+ARIMA is a time series model and only uses the past data to predict future data. If any other variable, in addition to the past data, is necessary for estimation (like historical prices, quality scale (e.g. Likert), etc. a different technique should be used (e.g. GLM or multilevel GLM models).
+
+~**\*\*\ User\ must\ manually\ retrieve\ the\ information\ (see\ instruction\ below)**~
 
 [Click here to see the instructions with examples](https://rpubs.com/Ldsantos/1042313){target="_blank"}
 :::
