--- a/Autoarima.Rmd
+++ b/Autoarima.Rmd
@@ -30,10 +30,9 @@ library(data.table)
 library(forecast)
 library(FinTS)
 
-
 # Define UI for data upload app ----
 ui <- fluidPage(
-    
+  
   # App title ----
   titlePanel("Demand forecast using ARIMA model"),
   
@@ -55,8 +54,8 @@ ui <- fluidPage(
       # Input: Checkbox if file has header ----
       checkboxInput("header", "Header", TRUE),
       
-      # Input: Select values
-      textInput("sku", "SKU", value = ""),
+      # Input: Select SKU ----
+      selectInput("sku", "SKU", choices = NULL),
       
       # Input: Select separator ----
       radioButtons("sep", "Separator",
@@ -107,14 +106,14 @@ server <- function(input, output, session) {
       return(NULL)
     
     df <- read.csv(inFile$datapath, header = input$header)
-    updateSelectInput(session, inputId = "col", choices = names(df))
-    return(df)
+    updateSelectInput(session, inputId = "sku", choices = df[[1]])
+    df
   })
   
   output$contents <- renderTable({
     req(data())
     
-    if (input$sku != "") {
+    if (!is.null(input$sku) && input$sku != "") {
       subset(data(), data()[, 1] == input$sku)
     } else {
       data.table(data())
@@ -122,80 +121,67 @@ server <- function(input, output, session) {
   })
   
   output$plot <- renderPlot({
-    req(data())
+    req(data(), input$sku)
     
-    if (input$sku != "") {
-      subset_sales <- subset(data(), data()[, 1] == input$sku)
-      year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
-      month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
-      data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
-      
-      model <- auto.arima(data.ts)
-      forecast <- forecast(model, level = 95)
-      plot(forecast, type = "p", col = "red")
-    }
+    subset_sales <- subset(data(), data()[, 1] == input$sku)
+    year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
+    month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
+    data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
+    
+    model <- auto.arima(data.ts)
+    forecast <- forecast(model, level = 95)
+    plot(forecast, type = "p", col = "red")
   })
   
   output$model_summary <- renderPrint({
-    req(data())
+    req(data(), input$sku)
     
-    if (input$sku != "") {
-      subset_sales <- subset(data(), data()[, 1] == input$sku)
-      year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
-      month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
-      data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
-      model <- auto.arima(data.ts)
-      forecast <- data.frame(forecast(model, level = 95))
-      forecast
-    }
+    subset_sales <- subset(data(), data()[, 1] == input$sku)
+    year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
+    month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
+    data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
+    model <- auto.arima(data.ts)
+    forecast <- data.frame(forecast(model, level = 95))
+    forecast
   })
   
   
   output$residuals <- renderPlot({
-    req(data())
+    req(data(), input$sku)
     
-    if (input$sku != "") {
-      subset_sales <- subset(data(), data()[, 1] == input$sku)
-      year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
-      month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
-      data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
-      model <- auto.arima(data.ts)
-      forecast <- data.frame(forecast(model, level = 95))
-      checkresiduals(model)
-    }
+    subset_sales <- subset(data(), data()[, 1] == input$sku)
+    year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
+    month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
+    data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
+    model <- auto.arima(data.ts)
+    checkresiduals(model)
   })
-
-      output$test_norm <- renderPrint({
-    req(data())
+  
+  output$test_norm <- renderPrint({
+    req(data(), input$sku)
     
-    if (input$sku != "") {
-      subset_sales <- subset(data(), data()[, 1] == input$sku)
-      year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
-      month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
-      data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
-      model <- auto.arima(data.ts)
-      test_result_norm <- ks.test(model$residuals, "pnorm", mean(model$residuals),
-			sd(model$residuals))
-      test_result_norm
-    }
+    subset_sales <- subset(data(), data()[, 1] == input$sku)
+    year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
+    month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
+    data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
+    model <- auto.arima(data.ts)
+    test_result_norm <- ks.test(model$residuals, "pnorm", mean(model$residuals), sd(model$residuals))
+    test_result_norm
   })  
-
-    output$test_arch <- renderPrint({
-    req(data())
+  
+  output$test_arch <- renderPrint({
+    req(data(), input$sku)
     
-    if (input$sku != "") {
-      subset_sales <- subset(data(), data()[, 1] == input$sku)
-      year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
-      month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
-      data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
-      model <- auto.arima(data.ts)
-      test_result_arch <- ArchTest(model$residuals)
-      test_result_arch
-    }
+    subset_sales <- subset(data(), data()[, 1] == input$sku)
+    year_init <- min(as.numeric(substr(data()[,3], 1, 4)))
+    month_init <- min(as.numeric(substr(data()[,3], 6, 7)))
+    data.ts <- ts(subset_sales[, 2], frequency = 12, start = c(year_init, month_init))
+    model <- auto.arima(data.ts)
+    test_result_arch <- ArchTest(model$residuals)
+    test_result_arch
   })  
-
 }
+
 # Create Shiny app ----
 shinyApp(ui, server)
-
 ```
